--- a/app/src/main/res/layout/call_notification.xml
+++ b/app/src/main/res/layout/call_notification.xml
@@ -48,6 +48,16 @@
             android:src="@drawable/ic_phone_down_red_vector" />
 
         <ImageView
+            android:id="@+id/notification_play_notification"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/call_notification_button_size"
+            android:layout_weight="1"
+            android:background="@drawable/ripple_background"
+            android:padding="@dimen/small_margin"
+            android:src="@drawable/ic_play_notification_vector"
+            android:visibility="gone" />
+
+        <ImageView
             android:id="@+id/notification_accept_call"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/call_notification_button_size"
